include/mosel_rt.h


typedef struct Model* mm_model;

typedef union SetR* mm_set;

typedef struct List* mm_list;

typedef struct Htentry* mm_proc;


typedef union Alltypes		/** AllTypes union **/
	{
	 mm_integer	integer;
	 mm_real	real;
	 mm_boolean	boolean;
	 mm_string	string;
	 mm_mpvar	mpvar;
	 mm_linctr	linctr;
	 mm_set		set;
	 mm_list	list;
	 mm_array	array;
	 mm_ref		ref;
	 mm_proc	proc;
	 mm_memblk	*memblk;
	 size_t		size;
	} mm_alltypes;


const char * MM_RTC XPRMgetlibpath(void);

void MM_RTC XPRMfreelibpath(void);

							/* Model functions */
mm_model MM_RTC XPRMfindmod(const char *name,int number);

mm_model MM_RTC XPRMgetnextmod(mm_model model);

int MM_RTC XPRMrunmod(mm_model model,int *returned, const char *parlist);

void MM_RTC XPRMresetmod(mm_model model);

int MM_RTC XPRMisrunmod(mm_model model);

void MM_RTC XPRMstoprunmod(mm_model model);

int MM_RTC XPRMgetmodprop(mm_model model,int what,mm_alltypes *result);

mm_model MM_RTC XPRMloadmod(const char *bname,const char *intname);

mm_model MM_RTC XPRMloadmodsec(const char *bname,const char *intname,const char *flags,const char *passfile,const char *privkey,const char *keys);

int MM_RTC XPRMunloadmod(mm_model model);


							/* Dictionary access */
int MM_RTC XPRMfindident(mm_model model,const char *text,mm_alltypes *value);

const char * MM_RTC XPRMgetnextident(mm_model model, void **ref);

const char * MM_RTC XPRMgetnextparam(mm_model model, void **ref);

void * MM_RTC XPRMgetnextdep(mm_model model, void *ref, const char **name,
						int *version, int *dso_pkg);

void * MM_RTC XPRMgetnextreq(mm_model model, void *ref,const char **name,
						int *type,void **data);

void * MM_RTC XPRMgetnextpbcomp(mm_model model, void *ref,int code,int *type);

int MM_RTC XPRMselectprob(mm_model model,int code,void *pb);

						/* Procedures/functions */
int MM_RTC XPRMgetprocinfo(mm_proc proc,const char **partyp,int *nbpar,int *type);

mm_proc MM_RTC XPRMgetnextproc(mm_proc proc);

							/* Set access */
int MM_RTC XPRMgetsetsize(mm_set set);

int MM_RTC XPRMgetsettype(mm_set set);

int MM_RTC XPRMgetfirstsetndx(mm_set set);

int MM_RTC XPRMgetlastsetndx(mm_set set);

mm_alltypes* MM_RTC XPRMgetelsetval(mm_set set, int ndx,mm_alltypes *value);

int MM_RTC XPRMgetelsetndx(mm_model model, mm_set set, mm_alltypes *value);

							/* List access */
int MM_RTC XPRMgetlistsize(mm_list list);

int MM_RTC XPRMgetlisttype(mm_list list);

void* MM_RTC XPRMgetnextlistelt(mm_list list,void *ref,int *type,mm_alltypes *value);

void* MM_RTC XPRMgetprevlistelt(mm_list list,void *ref,int *type,mm_alltypes *value);