include/xprm.bas

Attribute VB_Name = "XPRM"


' Function and Constant declarations for use with
' Xpress Mosel Compiler and Runtime libraries
' (c) Copyright Fair Isaac Corporation 2002-2015. All rights reserved.

Option Explicit
Option Compare Text


' ----------------------------------------------------------------------------------
' Constants

Global Const XPRM_VERSION = "4.0.0"

#If (VBA7 <> 0) And (Win64 <> 0) Then
' this is the new 64-bit type
Global Const XPRM_NULL As LongPtr = 0
Global Const XPRM_PTR_VARTYPE = vbLongLong
#Else
Global Const XPRM_NULL As Long = 0
Global Const XPRM_PTR_VARTYPE = vbLong
#End If



' Possible types
Global Const XPRM_TYP_NOT = 0
Global Const XPRM_TYP_INT = 1
Global Const XPRM_TYP_REAL = 2
Global Const XPRM_TYP_STRING = 3
Global Const XPRM_TYP_BOOL = 4
Global Const XPRM_TYP_MPVAR = 5
Global Const XPRM_TYP_LINCTR = 6
Global Const XPRM_TYP_ARR = 7
Global Const XPRM_TYP_SET = 8
Global Const XPRM_TYP_EXTN = &HFFF

' Possible structures
Global Const XPRM_STR_CONST = 0
Global Const XPRM_STR_REF = 4096
Global Const XPRM_STR_ARR = 8192
Global Const XPRM_STR_SET = 12288
Global Const XPRM_STR_LIST = 16384
Global Const XPRM_STR_PROC = 20480
Global Const XPRM_STR_MEM = 28672
Global Const XPRM_STR_UTYP = 32768
Global Const XPRM_STR_NTYP = 36864
Global Const XPRM_STR_REC = 40960
Global Const XPRM_STR_PROB = 45056

' Possible set/array structure
Global Const XPRM_GRP_FIX = 0
Global Const XPRM_GRP_DYN = 131072
Global Const XPRM_GRP_RNG = 0
Global Const XPRM_GRP_GEN = 262144
Global Const XPRM_ARR_DENSE = XPRM_GRP_FIX And XPRM_GRP_RNG
Global Const XPRM_ARR_SPARSE = XPRM_GRP_DYN And XPRM_GRP_GEN

' DSO parameters coding read/write
Global Const XPRM_CPAR_READ = 4096
Global Const XPRM_CPAR_WRITE = 8192

' DSO type properties encoding
Global Const XPRM_MTP_CREAT = 1
Global Const XPRM_MTP_DELET = 2
Global Const XPRM_MTP_TOSTR = 4
Global Const XPRM_MTP_FRSTR = 8
Global Const XPRM_MTP_PRTBL = 16
Global Const XPRM_MTP_RFCNT = 32
Global Const XPRM_MTP_COPY = 64
Global Const XPRM_MTP_APPND = 128
Global Const XPRM_MTP_ORSET = 256
Global Const XPRM_MTP_PROB = 512
Global Const XPRM_MTP_CMP = 1024

' Mask
Global Const XPRM_MSK_TYP = &HFFF
Global Const XPRM_MSK_STR = &H1F000
Global Const XPRM_MSK_GRP = &H60000
Global Const XPRM_MSK_FIN = &H80000
Global Const XPRM_MSK_LOC = &HFFF00000

' Problem status
Global Const XPRM_PBSOL = 1   '  A solution is available
Global Const XPRM_PBOPT = 2   ' Optimal solution found
Global Const XPRM_PBUNF = 4   ' Optimisation unfinished
Global Const XPRM_PBINF = 6   ' Problem infeasible
Global Const XPRM_PBUNB = 8   ' Problem is unbounded
Global Const XPRM_PBOTH = 10  ' Optimisation failed (cutoff)
Global Const XPRM_PBRES = 14
Global Const XPRM_PBCHG = 16  ' modified since last matrix generation
Global Const XPRM_PBOBJ = 32  ' objective modified since last generation

' Returned values from "runmodel"
Global Const XPRM_RT_OK = 0
Global Const XPRM_RT_INSTR = 1     ' Invalid instruction
Global Const XPRM_RT_MATHERR = 3   ' Math error
Global Const XPRM_RT_UNKN_PF = 5   ' Call to an unknown procedure/function
Global Const XPRM_RT_UNKN_SYS = 9  ' Call to an unknown system function
Global Const XPRM_RT_PROB = 10     ' Error when opening/closing a problem
Global Const XPRM_RT_ERROR = 11    ' Runtime Error code
Global Const XPRM_RT_EXIT = 12     ' Termination via exit(code) [callproc only]
Global Const XPRM_RT_IOERR = 13    ' IO Error code
Global Const XPRM_RT_BREAK = 14    ' Stopped on a breakpoint (debugger only)
Global Const XPRM_RT_NIFCT = 15    ' Stopped in native function (debugger only)
Global Const XPRM_RT_NULL = 16     ' NULL reference
Global Const XPRM_RT_LICERR = 17   ' License error
Global Const XPRM_RT_STOP = 128    ' Stopped

' IO codes
Global Const XPRM_F_TEXT = 0
Global Const XPRM_F_BINARY = 1
Global Const XPRM_F_READ = 0
Global Const XPRM_F_INPUT = 0
Global Const XPRM_F_WRITE = 2
Global Const XPRM_F_OUTPUT = 2
Global Const XPRM_F_APPEND = 4
Global Const XPRM_F_ERROR = 8
Global Const XPRM_F_LINBUF = 16
Global Const XPRM_F_INIT = 32
Global Const XPRM_F_SILENT = 64

' Return values for debugger
Global Const XPRM_DBG_STOP = -3
Global Const XPRM_DBG_NEXT = -2
Global Const XPRM_DBG_STEP = -1
Global Const XPRM_DBG_CONT = 0

' Properties for get[mod|dso]prop
Global Const XPRM_PROP_NAME = 0
Global Const XPRM_PROP_ID = 1
Global Const XPRM_PROP_VERSION = 2
Global Const XPRM_PROP_SYSCOM = 3
Global Const XPRM_PROP_USRCOM = 4
Global Const XPRM_PROP_SIZE = 5
Global Const XPRM_PROP_NBREF = 6
Global Const XPRM_PROP_DATE = 7
Global Const XPRM_PROP_PATH = 8
Global Const XPRM_PROP_IMCI = 9
Global Const XPRM_PROP_PRIORITY = 10
Global Const XPRM_PROP_SECSTAT = 11
Global Const XPRM_PROP_SKEYFP = 12

' Model security status decoding
Global Const XPRM_SECSTAT_CRYPTED = 1
Global Const XPRM_SECSTAT_SIGNED = 2
Global Const XPRM_SECSTAT_VERIFIED = 4
Global Const XPRM_SECSTAT_UNVERIFIED = 8

' Properties for gettypeprop
Global Const XPRM_TPROP_NAME = 0
Global Const XPRM_TPROP_FEAT = 1
Global Const XPRM_TPROP_EXP = 2
Global Const XPRM_TPROP_BID = 3

' Control characters for CB init
Global Const XPRM_CBC_SKIP = 0
Global Const XPRM_CBC_OPENLST = 1
Global Const XPRM_CBC_CLOSELST = 2
Global Const XPRM_CBC_OPENNDX = 3
Global Const XPRM_CBC_CLOSENDX = 4



' ----------------------------------------------------------------------------------
' DLL stubs

#If (VBA7 <> 0) And (Win64 <> 0) Then

' Utilities
Declare PtrSafe Function XPRMreadcstring Lib "xprmvb" Alias "vbXPRMreadcstring" (ByVal stringptr As LongPtr) As String

' Model functions
Declare PtrSafe Function XPRMcompmod Lib "xprm_mc" (ByVal options As String, ByVal srcfile As String, ByVal dstfile As String, ByVal userc As String) As Long
Declare PtrSafe Function XPRMcompmodsec Lib "xprm_mc" (ByVal options As String, ByVal srcfile As String, ByVal dstfile As String, ByVal userc As String, ByVal passfile As String, ByVal privkey As String, ByVal kfile As String) As Long
Declare PtrSafe Function XPRMexecmod Lib "xprm_mc" (ByVal options As String, ByVal srcfile As String, ByVal parlist As String, ByRef returned As Long, Optional ByRef rtmod As LongPtr = 0) As Long
Declare PtrSafe Function XPRMfindmod Lib "xprm_rt" (ByVal name As String, ByVal number As Long) As LongPtr
Declare PtrSafe Function XPRMgetnextmod Lib "xprm_rt" (ByVal model As LongPtr) As LongPtr
Declare PtrSafe Function XPRMrunmod Lib "xprm_rt" (ByVal model As LongPtr, ByRef returned As Long, ByVal parlist As String) As Long
Declare PtrSafe Sub XPRMresetmod Lib "xprm_rt" (ByVal model As LongPtr)
Declare PtrSafe Function XPRMisrunmod Lib "xprm_rt" (ByVal model As LongPtr) As Long
Declare PtrSafe Sub XPRMstoprunmod Lib "xprm_rt" (ByVal model As LongPtr)
Declare PtrSafe Function XPRMloadmod Lib "xprm_rt" (ByVal bname As String, ByVal intname As String) As LongPtr
Declare PtrSafe Function XPRMloadmodsec Lib "xprm_rt" (ByVal bname As String, ByVal intname As String, ByVal flags As String, ByVal passfile As String, ByVal privkey As String, ByVal keys As String) As LongPtr
Declare PtrSafe Function XPRMunloadmod Lib "xprm_rt" (ByVal model As LongPtr) As Long
Declare PtrSafe Function XPRMgetmodprop Lib "xprmvb" Alias "vbXPRMgetmodprop" (ByVal model As LongPtr, ByVal what As Long, ByRef result As Variant) As Long
Declare PtrSafe Function XPRMgetmodversion Lib "xprmvb" Alias "vbXPRMgetmodversion" (ByVal model As LongPtr, ByVal what As Long, ByRef result As Variant) As Long


Declare PtrSafe Function XPRMgetdllpath Lib "xprmvb" Alias "vbXPRMgetlibpath" () As String
Declare PtrSafe Function XPRMgetlibpath Lib "xprmvb" Alias "vbXPRMgetlibpath" () As String
Declare PtrSafe Sub XPRMfreelibpath Lib "xprm_rt" ()

' Dictionary access
Declare PtrSafe Function XPRMfindident Lib "xprmvb" Alias "vbXPRMfindident" (ByVal model As LongPtr, ByVal text As String, ByRef value As Variant) As Long
Declare PtrSafe Function XPRMgetnextident Lib "xprmvb" Alias "vbXPRMgetnextident" (ByVal model As LongPtr, ByRef ref As LongPtr) As String
Declare PtrSafe Function XPRMgetnextparam Lib "xprmvb" Alias "vbXPRMgetnextparam" (ByVal model As LongPtr, ByRef ref As LongPtr) As String
Declare PtrSafe Function XPRMgetnextdep Lib "xprmvb" Alias "vbXPRMgetnextdep" (ByVal model As LongPtr, ByVal ref As LongPtr, ByRef name As String, ByRef version As Long, ByRef dso_pkg As Long) As LongPtr
Declare PtrSafe Function XPRMgetnextreq Lib "xprmvb" Alias "vbXPRMgetnextreq" (ByVal model As LongPtr, ByVal ref As LongPtr, ByRef name As String, ByRef typecode As Long, ByRef data As LongPtr) As LongPtr
Declare PtrSafe Function XPRMgetnextpbcomp Lib "xprm_rt" (ByVal model As LongPtr, ByVal ref As LongPtr, ByVal code As Long, ByRef typecode As Long) As LongPtr
Declare PtrSafe Function XPRMselectprob Lib "xprm_rt" (ByVal model As LongPtr, ByVal code As Long, ByVal pb As LongPtr) As Long

' Procedures/functions
Declare PtrSafe Function XPRMgetprocinfo Lib "xprmvb" Alias "vbXPRMgetprocinfo" (ByVal proc As LongPtr, ByRef partyp As String, ByRef nbpar As Long, ByRef ftype As Long) As Long
Declare PtrSafe Function XPRMgetnextproc Lib "xprmvb" Alias "vbXPRMgetnextproc" (ByVal proc As LongPtr) As LongPtr

' Set access
Declare PtrSafe Function XPRMgetsetsize Lib "xprmvb" Alias "vbXPRMgetsetsize" (ByVal mmset As LongPtr) As Long
Declare PtrSafe Function XPRMgetsettype Lib "xprmvb" Alias "vbXPRMgetsettype" (ByVal mmset As LongPtr) As Long
Declare PtrSafe Function XPRMgetfirstsetndx Lib "xprmvb" Alias "vbXPRMgetfirstsetndx" (ByVal mmset As LongPtr) As Long
Declare PtrSafe Function XPRMgetlastsetndx Lib "xprmvb" Alias "vbXPRMgetlastsetndx" (ByVal mmset As LongPtr) As Long
Declare PtrSafe Sub XPRMgetelsetval Lib "xprmvb" Alias "vbXPRMgetelsetval" (ByVal mmset As LongPtr, ByVal ndx As Long, ByRef value As Variant)
Declare PtrSafe Function XPRMgetelsetndx Lib "xprmvb" Alias "vbXPRMgetelsetndx" (ByVal model As LongPtr, ByVal mmset As LongPtr, ByRef value As Variant) As Long

' List access
Declare PtrSafe Function XPRMgetlistsize Lib "xprmvb" Alias "vbXPRMgetlistsize" (ByVal list As LongPtr) As Long
Declare PtrSafe Function XPRMgetlisttype Lib "xprmvb" Alias "vbXPRMgetlisttype" (ByVal list As LongPtr) As Long
Declare PtrSafe Function XPRMgetprevlistelt Lib "xprmvb" Alias "vbXPRMgetprevlistelt" (ByVal list As LongPtr, ByVal ref As LongPtr, ByRef typeref As Long, ByRef value As Variant) As LongPtr
Declare PtrSafe Function XPRMgetnextlistelt Lib "xprmvb" Alias "vbXPRMgetnextlistelt" (ByVal list As LongPtr, ByVal ref As LongPtr, ByRef typeref As Long, ByRef value As Variant) As LongPtr
